--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "stickersmash",
+  "name": "mobile-app-cards",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -9,10 +9,18 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~3.1.3",
+    "@expo/vector-icons": "^14.0.0",
+    "@react-native-material/core": "^1.3.7",
+    "@reduxjs/toolkit": "^2.2.3",
+    "axios": "^1.6.8",
     "expo": "~50.0.14",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-native": "0.73.6"
+    "react-dom": "18.2.0",
+    "react-native": "0.73.6",
+    "react-native-web": "~0.19.6",
+    "react-redux": "^9.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
